--- a/frontend/src/components/Header/header.module.css
+++ b/frontend/src/components/Header/header.module.css
@@ -1,47 +1,84 @@
-.header{
-    background-color: white;
-    padding: 0 15px;
-    border-bottom: 1px solid #e72929;
+/* Estilo del encabezado */
+.header {
+    padding: 1rem 15px; /* Ajuste del relleno del encabezado */
+    background-color: rgba(0, 0, 0, 0); /* Fondo transparente por defecto */
+    transition: background-color 0.3s; /* Transición suave del color de fondo */
+    position: fixed; /* Posición absoluta para evitar superposición sobre el contenido del banner */
+    z-index: 2; /* Índice z para asegurar que esté sobre el contenido */
+    width: 100vw;
 }
+
+/* Enlace en el encabezado */
 .header a {
-    color: #e72929;
+    color: #ffffff;
+    font-style: normal;
+    text-decoration: none;
 }
-.header a:hover{
-    background-color: #e72929;
-    color: white;
+
+/* Estilo del enlace al pasar el mouse sobre él */
+.header a:hover {
     cursor: pointer;
 }
-.container{
+
+/* Cambios en el encabezado al hacer scroll */
+.header.scrolled {
+    background-color: #151515; /* Color de fondo cuando el encabezado se desplaza */
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1); /* Sombra suave al desplazarse */
+    padding: 0;
+}
+
+
+/* Contenedor del encabezado */
+.container {
     margin: 0 auto;
     display: flex;
+    width: 85vw;
     justify-content: space-between;
 }
+
+/* Estilo del logo en el encabezado */
 .logo {
-    font-weight: bold;
     padding: 1rem;
+    font-weight: 700;
+    color: #fff;
 }
-.header ul{
+
+/* Lista no ordenada en el encabezado */
+.header ul {
     display: flex;
     list-style-type: none;
     margin: 0;
 }
-.header ul a{
+
+/* Estilo de los elementos de la lista en el encabezado */
+.header ul a {
     padding: 1rem;
     display: inline-block;
 }
-.menu_container{
+
+/* Contenedor del menú en el encabezado */
+.menu_container {
     position: relative;
 }
-.menu{
+
+/* Estilo del menú desplegable en el encabezado */
+.menu {
     position: absolute;
     z-index: 1;
-    background-color: white;
     display: none;
 }
-.menu_container:hover .menu{
+
+/* Mostrar el menú desplegable al pasar el mouse sobre el contenedor del menú */
+.menu_container:hover .menu {
     display: block;
 }
+
+/* Estilo de los elementos del menú desplegable */
 .menu a {
     width: 100%;
     min-width: 8rem;
 }
+.menu a:hover{
+    color: #85a8ff;
+}
+
