--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@ body {
   font-weight: 400;
   overflow-x: hidden;
   position: relative;
-  background-color: #121212 !important;
+  background-color: #ffffff !important;
   color: #fff !important;
   font-family: 'Centra', sans-serif !important;
 }
