--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,10 @@
+:root{
+  --purple-color: #8d27ae;
+  --grey-color: #f3f3f3;
+  --white-color: #fff;
+  --black-color: #010101;
+  --transition: all 300ms ease-in-out;
+}
 *{
   box-sizing: border-box;
 }
