--- a/frontend/src/pages/auth/authPage.module.css
+++ b/frontend/src/pages/auth/authPage.module.css
@@ -1,13 +1,13 @@
-.container {
+.authContainer {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin-top: 3rem;
   }
   
   .details {
     width: 25rem;
+    margin-top: 15px;
   }
   
   .details form {
@@ -26,3 +26,6 @@
     justify-content: center;
     align-items: center;
   }
+form .button {
+  align-items: center;
+}
